@@ -206,22 +206,22 @@ shellcmd = "peak.naming.factories.shellcmd:ShellCommandCtx"
 # Data type conversion for database drivers
 
 [Sybase.sql_types]
-* = config.Fallback('peak.sql_types')
+* = config.Namespace('peak.sql_types')
 
 [pgdb.sql_types]
-* = config.Fallback('peak.sql_types')
+* = config.Namespace('peak.sql_types')
 
 [sqlite.sql_types]
-* = config.Fallback('peak.sql_types')
+* = config.Namespace('peak.sql_types')
 
 [gadfly.sql_types]
-* = config.Fallback('peak.sql_types')
+* = config.Namespace('peak.sql_types')
 
 [cx_Oracle.sql_types]
-* = config.Fallback('peak.sql_types')
+* = config.Namespace('peak.sql_types')
 
 [DCOracle2.sql_types]
-* = config.Fallback('peak.sql_types')
+* = config.Namespace('peak.sql_types')
 
 
 
@@ -416,7 +416,7 @@ peak.running.interfaces.ITwistedReactor =
 # namespace, so that anything not supplied by the startup script will
 # be supplied by the environment.
 
-* = config.Fallback('environ.*')
+* = config.Namespace('environ.*')
 
 [Load Settings From]
 # "Load Settings From" sections are processed in-line to load settings from
